--- a/Mandatory_I/public/frontpage.css
+++ b/Mandatory_I/public/frontpage.css
@@ -2,13 +2,16 @@ body {
   font-family: 'Courier New', monospace;
   background-color: #2B2B2B;
   color: #C7C9CB;
+  margin: 0;
+  padding: 0;
 }
+
 
 nav {
   position: fixed;
-  top: 0;
+  top: 60px;
   left: 0;
-  width: 200px;
+  width: 250px;
   height: 100vh;
   background-color: #1A1A1A;
   border-right: 2px solid #515454;
@@ -28,6 +31,10 @@ nav li>a {
   text-decoration: none;
   border: 1px solid transparent;
   transition: background-color 0.3s;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
 }
 
 nav li>a:hover {
@@ -58,18 +65,10 @@ nav ul ul li>a.active {
   font-size: 16px;
 }
 
-.spy-sublink i.fa-folder-open {
-  margin-right: 5px;
-  color: #00cc00;
-  font-size: 16px;
-}
-
 .spy-link.active i.fa-folder,
-.spy-sublink.active i.fa-folder-open {
+.spy-sublink.active i.fa-folder {
   color: #ffcc00;
 }
-
-
 
 .window {
   background-color: #3C3F41;
@@ -77,8 +76,8 @@ nav ul ul li>a.active {
   margin-top: 80px;
   margin-bottom: 40px;
   border-radius: 10px;
-  margin-left: 220px;
-  margin-right: 25px;
+  margin-left: 270px;
+  margin-right: 20px;
   padding: 20px;
 }
 
@@ -90,17 +89,24 @@ nav ul ul li>a.active {
 }
 
 .window-main-title {
-  background-color: #515454;
-  font-size: 1.2em;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
+  background: linear-gradient(to bottom, #666, #515454);
+  border: 1px solid #333;
+  box-shadow: inset 0 0 5px #000, 0 2px 5px rgba(0, 0, 0, 0.2);
+  font-size: 1.4em;
+  padding: 10px 15px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
   border-bottom: 1px solid #787B7E;
+  text-shadow: 1px 1px 1px #000;
 }
 
 .window-sub-title {
-  background-color: #464849;
-  font-size: 1.1em;
+  background: linear-gradient(to bottom, #555, #464849);
+  border: 1px solid #333;
+  font-size: 1.05em;
   border-top: 1px solid #3C3F41;
+  text-shadow: 1px 1px 1px #000;
+  padding: 8px 12px;
 }
 
 .window-description {
@@ -113,23 +119,51 @@ nav ul ul li>a.active {
 }
 
 .toc-subsection {
+  background-color: #343637;
+  border: 1px solid #515454;
+  padding: 30px 20px;
+  margin-top: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
   min-height: 600px;
-  padding: 20px 0;
-  border-top: 1px solid #ccc;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+}
+
+.toc-subsection h2,
+.toc-subsection h3 {
+  margin-top: 0;
+  border-bottom: 1px solid #515454;
+  padding-bottom: 10px;
+  color: #C7C9CB;
+  font-weight: bold;
+}
+
+.toc-subsection ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.toc-subsection li {
+  padding: 5px 0;
+}
+
+.toc-subsection a {
+  color: #878C91;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.toc-subsection a:hover {
+  color: #C7C9CB;
 }
 
 .code-snippet,
 .terminal-snippet {
   background-color: #222;
-  padding: 10px;
+  padding: 10px 12px;
   border-radius: 5px;
   white-space: pre-wrap;
   font-size: 0.9em;
-  width: 70%
+  width: calc(100% - 24px)
 }
 
 .code-snippet {
@@ -149,19 +183,70 @@ nav ul ul li>a.active {
   height: 500px;
 }
 
+#os-navbar {
+  background-color: #1A1A1A;
+  padding: 10px 0;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+  position: fixed;
+  width: 100%;
+  height: 40px;
+  top: 0;
+  z-index: 1000;
+  border-bottom: 2px solid #515454;
+  display: flex;
+  align-items: center;
+}
+
+.navbar-container {
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.nav-item {
+  font-family: 'Courier New', monospace;
+  font-size: 20px;
+  color: #C7C9CB;
+  text-decoration: none;
+  padding: 5px 15px;
+  transition: background-color 0.3s, color 0.3s;
+  border: 1px solid transparent;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.nav-item:hover {
+  background-color: #333;
+  color: #fff;
+  border-color: #515454;
+}
+
+
 @media (max-width: 768px) {
   nav {
-      display: none;
+    display: none;
   }
 
   .window {
-      margin-left: 0;
-      width: 95%;
-      margin: 0 auto;
-      margin-bottom: 20px;
+    margin-left: 0;
+    width: 95%;
+    margin-bottom: 10px;
+    margin-top: 70px;
   }
 
   #content-spacer {
-      display: none;
+    display: none;
+  }
+
+  .nav-item {
+    font-size: 18px;
+    padding: 10px 10px;
+  }
+
+  .navbar-container {
+    width: 95%;
   }
 }
