--- a/05._Pokemon/public/components/navbar/navbar.html
+++ b/05._Pokemon/public/components/navbar/navbar.html
@@ -1,31 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
   <link rel="stylesheet" href="/assests/css/main.css">
-  <link rel="stylesheet" href="/battle/battle.css">
-  <title>Battle</title>
+  <title>Document</title>
 </head>
-
 <body>
   <nav>
     <a href="/"><img id="logo" src="/assests/images/logo.png" /></a>
     <a href="/battle">Battle</a>
     <a href="/contact">Contact</a>
   </nav>
-  <main>
-    <h1>Battle (Refresh to attack 1)</h1>
-
-    <h3>Pokemon in battle:</h3>
-    <h3 id="pokemon-name"></h3>
-    <p id="pokemon-strength"></p>
-    <div id="image-wrapper"></div>
-  </main>
-  <script src="/assests/js/footer.js"></script>
-  <script src="/battle/battle.js"></script>
-</body>
-
-</html>
+<main>
