--- a/05._Pokemon/public/components/navbar/navbar.html
+++ b/05._Pokemon/public/components/navbar/navbar.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
   <link rel="stylesheet" href="/assests/css/main.css">
-  <title>Document</title>
+  $CSS_LINKS
+  <title>$TAB_TITLE</title>
 </head>
 <body>
   <nav>
