--- a/Mandatory_II/client/src/app.css
+++ b/Mandatory_II/client/src/app.css
@@ -35,7 +35,8 @@ h1 {
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0.5rem;
+  padding-top: 1.5em;
   text-align: center;
 }
 
